# brazilian-e-commerce-nlp-deep-learning

./: e-commerce_nlp.ipynb  e_commerce_nlp.ipynb  e_commerce_transformers.ipynb  pyproject.toml  results.pkl
