[tool.poetry]
name = "brazilian-e-commerce-nlp-deep-learning"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
tensorflow = "^2.18.0"
nltk = "^3.9.1"
kagglehub = "^0.3.6"
jupyterlab = "^4.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
